# solver-ralph

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  rust-toolchain.toml
.claude/: next-instance-prompt.md
.tmp/: ralph-loops.md  scratchpad.md
.tmp/chirality-framework/: ARCHITECTURE.md  README.md  pyproject.toml
.tmp/chirality-framework/artifacts/: lens_catalog.json  lens_overrides.json  phase1_dialogue.jsonl  prompts_assets.manifest.yaml
.tmp/chirality-framework/chirality/: Phase1_full-run_ChatGPT.txt  __init__.py  normative_spec.txt  normative_system_prompt_Phase1.txt
.tmp/chirality-framework/chirality/application/lenses/: __init__.py  catalog_generator.py  catalog_manager.py  lens_resolver.py  overrides_manager.py
.tmp/chirality-framework/chirality/application/phase1/: __init__.py  aggregator.py  contracts.py  dialogue_run.py  dialogue_run_updates.py  snapshotter.py
.tmp/chirality-framework/chirality/application/phase2/: __init__.py  tensor_engine.py
.tmp/chirality-framework/chirality/application/services/: __init__.py  cell_computation_service.py
.tmp/chirality-framework/chirality/domain/: __init__.py  budgets.py  constants.py  contracts.py  preflight.py  pricing.py  provenance.py  stations.py  types.py  validation.py
.tmp/chirality-framework/chirality/domain/matrices/: __init__.py  canonical.py
.tmp/chirality-framework/chirality/domain/pipeline/: __init__.py  stages.py
.tmp/chirality-framework/chirality/domain/semantics/: __init__.py  lens.py  lens_catalog.py  operations.py
.tmp/chirality-framework/chirality/infrastructure/: __init__.py  caching.py
.tmp/chirality-framework/chirality/infrastructure/api/: guards.py
.tmp/chirality-framework/chirality/infrastructure/export/: __init__.py  neo4j_loader.py
.tmp/chirality-framework/chirality/infrastructure/lenses/: __init__.py  build.py  derive.py
.tmp/chirality-framework/chirality/infrastructure/llm/: __init__.py  budget_resolver.py  config.py  mock_resolvers.py  openai_adapter.py  repair.py
.tmp/chirality-framework/chirality/infrastructure/monitoring/: tracer.py
.tmp/chirality-framework/chirality/infrastructure/prompts/: __init__.py  json_tails.py  registry.py
.tmp/chirality-framework/chirality/infrastructure/prompts/assets/: metadata.yml  metadata.yml.backup  system.md
.tmp/chirality-framework/chirality/infrastructure/prompts/assets/phase1/: MANIFEST.md  lens_catalog_generation.md  metadata_additions.yml  normalize_to_json.md
.tmp/chirality-framework/chirality/infrastructure/prompts/assets/phase1/C/: generate_lenses.md  initialize.md  mechanical.md
.tmp/chirality-framework/chirality/infrastructure/prompts/assets/phase1/D/: interpreted.md  mechanical.md
.tmp/chirality-framework/chirality/infrastructure/prompts/assets/phase1/E/: generate_lenses.md  interpreted.md  mechanical.md
.tmp/chirality-framework/chirality/infrastructure/prompts/assets/phase1/F/: lensed.md  mechanical.md
.tmp/chirality-framework/chirality/infrastructure/prompts/assets/phase1/G/: extract.md
.tmp/chirality-framework/chirality/infrastructure/prompts/assets/phase1/J/: extract.md
.tmp/chirality-framework/chirality/infrastructure/prompts/assets/phase1/K/: transform.md
.tmp/chirality-framework/chirality/infrastructure/prompts/assets/phase1/P/: extract.md
.tmp/chirality-framework/chirality/infrastructure/prompts/assets/phase1/T/: transform.md
.tmp/chirality-framework/chirality/infrastructure/prompts/assets/phase1/X/: mechanical.md
.tmp/chirality-framework/chirality/infrastructure/prompts/assets/phase1/Z/: generate_lenses.md  lensed.md  principles.md
.tmp/chirality-framework/chirality/infrastructure/semantics/: __init__.py  resolvers.py
.tmp/chirality-framework/chirality/infrastructure/validation/: __init__.py  json_schema_converter.py  schemas.py
.tmp/chirality-framework/chirality/interfaces/: __init__.py  cli.py
.tmp/chirality-framework/chirality/lib/: __init__.py  logging.py
.tmp/chirality-framework/chirality/postprocessing/: markdown_extractor.py
.tmp/chirality-framework/chirality/viewer/: __init__.py  render.py
.tmp/chirality-framework/chirality_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
crates/sr-adapters/: Cargo.toml
crates/sr-adapters/src/: attachment_store.rs  candidate_store.rs  config.rs  event_manager.rs  evidence.rs  governor.rs  graph.rs  infisical.rs  integrity.rs  lib.rs  minio.rs  nats.rs  oracle_runner.rs  oracle_suite.rs  oracle_worker.rs  outbox.rs  postgres.rs  postgres_oracle_registry.rs  projections.rs  replay.rs  restricted.rs  semantic_suite.rs  semantic_worker.rs  worker.rs
crates/sr-api/: Cargo.toml
crates/sr-api/src/: auth.rs  config.rs  governed.rs  main.rs  observability.rs  ref_validation.rs
crates/sr-api/src/handlers/: approvals.rs  attachments.rs  candidates.rs  config.rs  decisions.rs  error.rs  evidence.rs  exceptions.rs  freeze.rs  intakes.rs  iterations.rs  loops.rs  mod.rs  oracles.rs  prompt_loop.rs  records.rs  references.rs  runs.rs  staleness.rs  stop_triggers.rs  templates.rs  verification.rs  work_surfaces.rs
crates/sr-api/tests/integration/: branch_0_e2e_test.rs  replay_determinism_test.rs  semantic_ralph_loop_e2e.rs  work_surface_start_test.rs
crates/sr-domain/: Cargo.toml
crates/sr-domain/src/: commands.rs  config.rs  context.rs  entities.rs  errors.rs  events.rs  intake.rs  integrity.rs  lib.rs  plan_instance.rs  portal.rs  procedure_templates.rs  records.rs  refs.rs  semantic_oracle.rs  state_machines.rs  templates.rs  work_surface.rs
crates/sr-e2e-harness/: Cargo.toml
crates/sr-e2e-harness/src/: client.rs  failure_modes.rs  harness.rs  lib.rs  main.rs  replay.rs  transcript.rs
crates/sr-governor/: Cargo.toml
crates/sr-governor/src/: config.rs  main.rs
crates/sr-oracles/: Cargo.toml
crates/sr-oracles/src/: e2e.rs  flake_control.rs  integration.rs  lib.rs  main.rs  report.rs
crates/sr-ports/: Cargo.toml
crates/sr-ports/src/: lib.rs
deploy/: Dockerfile.api  Dockerfile.governor  Dockerfile.ui  docker-compose.yml  init.sh  start.sh
migrations/: 003_graph.sql  (+13 more)
(+421 files in other folders)
