[package]
name = "sr-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SOLVER-Ralph adapter implementations: PostgreSQL, MinIO, NATS, Zitadel, etc."

[dependencies]
sr-domain = { path = "../sr-domain" }
sr-ports = { path = "../sr-ports" }
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sqlx.workspace = true
tracing.workspace = true
ulid.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "macros"] }
