[package]
name = "sr-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SOLVER-Ralph HTTP API service built with Axum"

[[bin]]
name = "sr-api"
path = "src/main.rs"

[dependencies]
sr-domain = { path = "../sr-domain" }
sr-ports = { path = "../sr-ports" }
sr-adapters = { path = "../sr-adapters" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
