[package]
name = "sr-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SOLVER-Ralph HTTP API service built with Axum"

[[bin]]
name = "sr-api"
path = "src/main.rs"

[dependencies]
sr-domain = { path = "../sr-domain" }
sr-ports = { path = "../sr-ports" }
sr-adapters = { path = "../sr-adapters" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
once_cell.workspace = true
chrono.workspace = true
thiserror.workspace = true
sqlx.workspace = true
rand.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
futures.workspace = true
tokio-stream = "0.1"
async-stream = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }

[[test]]
name = "semantic_ralph_loop_e2e"
path = "tests/integration/semantic_ralph_loop_e2e.rs"
