[package]
name = "sr-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SOLVER-Ralph domain core: pure domain logic, state machines, and invariants"

[dependencies]
ulid.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
